--- a/HealthSync/HealthSync/HealthSync.csproj
+++ b/HealthSync/HealthSync/HealthSync.csproj
@@ -84,6 +84,9 @@
 	  <MauiXaml Update="Views\MedicatiePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\MenuPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
