stappenteller, resetservice en counter settings page

--- a/HealthSync/HealthSync/HealthSync.csproj
+++ b/HealthSync/HealthSync/HealthSync.csproj
@@ -75,6 +75,9 @@
 	  <MauiXaml Update="Views\Auth\RegisterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\CountersPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\DashboardPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
